--- a/css/ListView.css
+++ b/css/ListView.css
@@ -1,11 +1,39 @@
 .list-view {
-	display: table;
+	margin: 10px;
+}
+.list-view__table {
 	table-layout: fixed;
 	width: 100%;
+	border-collapse: collapse;
+	border-spacing: 0;
+	box-shadow:rgba(0,0,0,.1) 0 2px 5px;
 }
-.list-view__row {
-	display: table-row;
+.list-view__table thead tr {
+	background-color: #436ba8;
 }
-.list-view__cell {
-	display: table-cell;
+.list-view__table tr {
+	border: solid 1px #f1f1f1;
+}
+.list-view__table tbody tr:nth-child(even) {
+	background-color:#f9f9f9;
+}
+.list-view__table tbody tr:nth-child(odd) {
+	background-color:#fff;
+}
+.list-view__table tbody tr:hover {
+	background-color: rgba(201, 233, 239, 0.3);
+}
+.list-view__table th, 
+.list-view__table td {
+	padding: 5px;
+	text-align: left;
+}
+.list-view__table th {
+	color: #fff;
+}
+.list-view__table tbody td span {
+	display: inline-block;
+	width: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
