--- a/css/Editor.css
+++ b/css/Editor.css
@@ -24,9 +24,58 @@
     padding: 5px;
     width: 100%;
     box-sizing: border-box;
-    font-size: 14px;
+    font-size: 10pt;
     font-family: tahoma;
 }
-.css-form input.ng-invalid {
+.css-form form.ng-submitted input.ng-invalid {
     background-color: rgba(255,0,0, 0.5);
+}
+.css-form .buttons {
+    text-align: right;
+}
+.css-form button, .css-form a {
+    font-size: 12pt;
+}
+.css-form select {
+    width: 100%;
+    border: solid 1px #ccc;
+    background-color: #fff;
+    padding: 5px 0;
+    font-family: tahoma;
+    font-size: 10pt;
+}
+.css-form .rights-list {
+    height: 150px;
+    overflow: auto;
+    list-style: none;
+    border: solid 1px #ccc;
+    padding: 0;
+    font-size: 10pt;
+}
+.css-form .rights-list li {
+    padding: 5px;
+}
+.css-form .rights-list li button {
+    float: right;
+    font-size: 10pt;
+    background: transparent;
+    border: none;
+    color: rgba(0, 0,255, 0.5);
+    outline: none;
+    cursor: pointer;
+}
+.css-form .rights-list li:hover {
+    background-color: rgba(0,0,0, 0.2);
+}
+.css-form .btn-add-right {
+    float: right;
+    font-size: 10pt;
+    padding: 5px;
+    margin-left: 5px;
+}
+.css-form .select-right-wrapper {
+    overflow: auto;
+}
+.css-form .user-selection {
+    margin-bottom: 20px;
 }
