--- a/views/editor.html
+++ b/views/editor.html
@@ -1,4 +1,8 @@
-<div>
-    <user-editor model="model" ng-show="model.type === 'User'" />
-    <manager-editor ng-show="model.type === 'Manager'" />
+<div class="css-form">
+    <select ng-show="selectorVisible" ng-model="userType" class="user-selection">
+        <option value="User">User</option>
+        <option value="Manager">Manager</option>
+    </select>
+    <user-editor model="model" ng-if="userType === 'User'"></user-editor>
+    <manager-editor model="model" ng-if="userType === 'Manager'" ></manager-editor>
 </div>
